etch.css
.prompt-area {
    display: flex;
    gap: 10px;
    wrap: nowrap;
    align-items: center;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.prompt {
    margin: 15px;
}

.etch-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 90%;
    width: 100%;
    background-color: red;
    border-radius: 3%;
}

.top {
    display: flex;
    height: 80px;
    width: 100%;
}

.logo {
    height: 80px;
    width: 100%
}

.border, .sidebar, .bottom, .top {
    background-color: red;
}

.middle {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.sidebar {
    width: 90px;
}

.grid-container {
    display: flex;
    flex: auto;
    height: 59vh;
    flex-flow: row wrap;
    background-color: beige;
    border-radius: 3%;
}

.bottom {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 14vh;
    width: 100%;
}

.knob {
    margin: 1%;
    height: 80px;
    width: 80px;
    border-radius: 50%;
    color: rgb(225, 225, 225);
}

